<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/default_padding"
tools:context=".MainActivity">

    <LinearLayout
    android:id="@+id/xTop"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

        <TextView
        android:id="@+id/xTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="right"/>

    </LinearLayout>

    <android.support.v7.widget.GridLayout
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/xGrid"
    android:layout_width="0dp"
    android:layout_height="0dp"
    grid:columnCount="3"
    grid:rowCount="3"
    grid:orientation="horizontal"
    android:paddingBottom="32dp"
    android:paddingTop="32dp"
    app:layout_constraintBottom_toTopOf="@+id/xBottom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/xTop">

        <TextView
        android:id="@+id/xStatus"
        grid:layout_gravity="right"
        grid:layout_columnSpan="3"
        grid:layout_rowWeight="1"/>

        <Button
        android:id="@+id/x1"
        android:text="@string/x1"
        android:textSize="16sp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"/>

        <Button
        android:id="@+id/x2"
        android:text="@string/x2"
        android:textSize="16sp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"/>

        <Button
        android:id="@+id/x3"
        android:text="@string/x3"
        android:textSize="16sp"
        grid:layout_columnWeight="1"
        grid:layout_rowWeight="1"/>

    </android.support.v7.widget.GridLayout>

    <LinearLayout
    android:id="@+id/xBottom"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

        <View
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_weight="1"/>

        <Button
        android:id="@+id/xBack"
        android:background="@mipmap/ic_back_w"
        android:layout_width="36dp"
        android:layout_height="36dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>